# SKrulll

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PERBAIKANBESOK!.md  README.md  SETUP.md  docker-migration.sh  git-fix.sh  go.mod  go.sum  main.py  requirements.txt  setup.bat  setup.command  setup.sh
backup/config/optimized_docker/: go.dockerfile
backup/templates/docker/: api-tester.dockerfile  exploit-tester.dockerfile  nodejs.dockerfile  python.dockerfile  rust.dockerfile  vulnerability-scanner.dockerfile
config/: config.example.yaml  database_optimization.sql  neo4j_optimization.cypher  optimization.py
config/optimized_docker/: go.dockerfile  node.dockerfile  python.dockerfile  rust.dockerfile
deploy/: backup.py  production.py
docs/: api.md  architecture.md  deployment.md  development.md
migrations/neo4j/: 001_initial_schema.cypher
migrations/postgresql/: 001_initial_schema.sql
modules/: __init__.py
modules/osint/: __init__.py  aggregator.py  domain_recon.py  search_footprint.py  social_analyzer.py  social_media.py
modules/scanner/domain/: Dockerfile  go.mod  main.go
modules/scanner/metadata/src/: lib.rs
modules/scanner/netmap/: Cargo.toml  Dockerfile
modules/scanner/netmap/python_bindings/: network_mapper.py
modules/scanner/netmap/src/: lib.rs  main.rs
modules/security/: __init__.py  attack_vector_mapper.py  code_analyzer.py  data_leak_detector.py  entry_point_analyzer.py  network_mapper.py  port_scanner.py  reporting_system.py  service_enumerator.py  vulnerability_scanner.py
modules/vulnerability/: __init__.py  requirements.txt
modules/vulnerability/api_tester/: config.json  go.mod  go.sum  main.go
modules/vulnerability/exploiter/: __init__.py  exploit_tester.py
modules/vulnerability/exploiter/exploits/: ms17-010-eternalblue.json  wordpress-xmlrpc-brute.json
modules/vulnerability/exploiter/templates/: exploit_report.html
modules/vulnerability/scanner/: __init__.py  vulnerability_scanner.py
orchestrator/: __init__.py  cli.py  config.py  logging_config.py  messaging.py
orchestrator/db/: __init__.py  elasticsearch_client.py  mongodb_client.py  neo4j_client.py  postgresql_client.py
output/system_test/: system_test_report_20250511_233116.json
queries/: mongodb_queries.json  neo4j_queries.json  postgresql_queries.json
scheduler/: __init__.py  task_manager.py
static/css/: style.css
static/img/: convert_logo.html
static/js/: app.js  main.js
static/js/modules/: api.js  auth.js  core.js  tasks.js  ui.js
templates/: docker-compose.yml  docker-network.yml
templates/docker/: golang.dockerfile  nodejs.dockerfile  python.dockerfile  rust.dockerfile  vulnerability-scanner.dockerfile
tests/: __init__.py  benchmark.py  test_attack_vector_mapper.py  test_e2e.py  test_entry_point_analyzer.py  test_integration.py  test_reporting_system.py
web/: __init__.py  app.py  auth.py  routes.py  schemas.py  utils.py
web/static/js/: app.js  main.js
web/static/js/modules/: api.js  tasks.js  (+1 more)
web/templates/: 400.html  401.html  403.html  404.html  405.html  500.html  base.html  dashboard.html  index.html
wordlists/: subdomains.txt
(+1 files in other folders)
