[package]
name = "skrulll"
version = "0.1.0"
edition = "2021"
authors = ["SKrulll Security Team <pixelbrow13@gmail.com>"]
description = "Advanced Cybersecurity and OSINT Tool Orchestrator"
repository = "https://github.com/pixelbrow720/skrulll"
license = "MIT"
readme = "README.md"

[workspace]
members = [
    "modules/scanner/netmap",
    "modules/scanner/metadata",
]

[dependencies]
# Core dependencies
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
async-trait = "0.1.68"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
thiserror = "1.0.40"
anyhow = "1.0.71"
log = "0.4.17"
env_logger = "0.10.0"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
config = "0.13.3"

# Network and security
reqwest = { version = "0.11.18", features = ["json", "rustls-tls"] }
trust-dns-resolver = "0.22.0"
pnet = "0.33.0"
pcap = "1.1.0"
tls-parser = "0.11.0"
rustls = "0.21.1"
ssh2 = "0.9.4"
rustscan = "2.1.1"

# Data processing
rayon = "1.7.0"
dashmap = "5.4.0"
petgraph = "0.6.3"
regex = "1.8.3"
url = "2.3.1"
ipnetwork = "0.20.0"
uuid = { version = "1.3.3", features = ["v4", "serde"] }

# Database connectors
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json", "chrono", "uuid"] }
mongodb = "2.5.0"
elasticsearch = "8.5.0-alpha.1"
neo4rs = "0.6.2"

# Web and API
axum = "0.6.18"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors", "compression", "auth"] }
hyper = "0.14.26"
http = "0.2.9"
utoipa = { version = "3.3.0", features = ["axum", "yaml"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["axum"] }

# Visualization
plotters = "0.3.4"
tui = { version = "0.19.0", features = ["crossterm"] }
crossterm = "0.26.1"

# Testing
mockall = "0.11.4"
wiremock = "0.5.19"
criterion = "0.5.1"
proptest = "1.2.0"

[dev-dependencies]
tokio-test = "0.4.2"
test-log = "0.2.11"
pretty_assertions = "1.3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
